# LiteDoc

./: LICENSE  README.md  index.html
.github/workflows/: publish.yml
cli/: README.md  pyproject.toml
cli/litedoc_cli/: __init__.py  ai.py  cli.py  engine.py
scripts/: build.py  pre_publish_check.sh
src/: benchmark.html  index.html  privacy.html  sw.js  terms.html
src/core/: LiteDoc.js  config.json
src/core/extraction/: addons.js
src/core/layout/: pdf-parser.js
src/core/utils/: geometry.js  utils.js
src/css/: addons.css  main.css  mobile.css
src/js/: addons.js  benchmark.js  demo.js  downloads.js  dropzone.js  file-tree.js  geometry.js  litedoc-core.js  main.js  markdown-renderer.js  mobile-ux.js  ocr.js  pdf-parser.js  reset-utils.js  state.js  terminal.js  ui-controls.js  ui.js  utils.js
tests/: run_tests.sh
tests/js/: geometry.test.mjs  utils.test.mjs
tests/py/: test_cli_ai.py  test_cli_e2e.py  test_release_gui.py  test_release_tooling.py  test_scoring.py
training/: README.md  baseline_v2.6.0.json  benchmark_ab.py  current_params.json  evolve_dataset.py  generate_benchmark.py  notify_weekly.py  orchestrator.py  requirements.txt
training/benchmark/: harness.py  scoring.py
training/dashboard/: index.html
training/optimizer/: fitness.py  search.py
training/sample_materials/: README.md
training/sample_materials/Academic/: academic_0000.json
training/sample_materials/Book/: book_0000.json
training/sample_materials/Cursed/: cursed_0000.json  (+1 more)
training/synthesizer/: backends.py  degrader.py  generator.py  ground_truth.py
(+4 files in other folders)
